further adjustments; conversion to RelationalQuery as test
